add footer & utils

--- a/index.html
+++ b/index.html
@@ -44,20 +44,55 @@
         </section>
 
         <section class="menus">
-            <h2>Restaurants</h2>
-            <div class="menus__cards">
-              <div class="card">La palette du goût</div>
-            </div>
-              <div class="menus__cards">
-                <div class="card">La note enchantée</div>
+          <h2>Restaurants</h2>
+          <div class="menus__cards">
+            <a href="./pages/resto-1.html" class="card new">
+              <div class="card__image card__image-1"></div>
+              <div class="card__description">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
               </div>
-              <div class="menus__cards">
-                <div class="card">À la française</div>
+            </a>
+            <a href="./pages/resto-2.html" class="card new">
+              <div class="card__image card__image-2"></div>
+              <div class="card__description">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
               </div>
-              <div class="menus__cards">
-                <div class="card">Le Délice des sens</div>
-            </div>
-          </section>
+            </a>
+            <a href="./pages/resto-3.html" class="card">
+              <div class="card__image card__image-3"></div>
+              <div class="card__description">
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+            </a>
+            <a href="./pages/resto-4.html" class="card">
+              <div class="card__image card__image-4"></div>
+              <div class="card__description">
+                <h3>Le Délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+            </a>
+          </div>
+        </section>
       </main>
-</body>
-</html>
+  
+      <footer>
+        <h2>ohmyfood</h2>
+        <p>
+          <i class="fas fa-utensils"></i>
+          Proposer un restaurant
+        </p>
+        <p>
+          <i class="fas fa-hands-helping"></i>
+          Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <p>
+          <a href="mailto:math.paraveman@gmail.com">Contact</a>
+        </p>
+      </footer>
+    </body>
+  
+  </html>
