--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
       <main>
         <section class="explorer">
-          <h1>Réservez le menu qui <br>vous convient</h1>
+          <h2>Réservez le menu qui <br>vous convient</h2>
           <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
           <button>Explorer nos restaurants</button>
           <div class="gradient">
@@ -35,7 +35,7 @@
         </section>
   
         <section class="tuto">
-          <h1>Fonctionnement</h1>
+          <h2>Fonctionnement</h2>
           <ol>
             <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
             <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
@@ -45,39 +45,47 @@
 
         <section class="menus">
           <h2>Restaurants</h2>
-          <div class="menus__cards">
-            <a href="./pages/resto-1.html" class="card new">
-              <div class="card__image card__image-1"></div>
-              <div class="card__description">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
-              </div>
+          <div class ="menus__cards">
+          <a href="#" class="card new">
+            <div class="card__image card__image-1"></div>
+            <div class="card__description">
+              <h3>La palette du goût</h3>
+              <p>Ménilmontant</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+          <a href="#" class="card new">
+            <div class="card__image card__image-2"></div>
+            <div class="card__description">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+          <a href="#" class="card">
+            <div class="card__image card__image-3"></div>
+            <div class="card__description">
+              <h3>À la française</h3>
+              <p>Cité Rouge</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
             </a>
-            <a href="./pages/resto-2.html" class="card new">
-              <div class="card__image card__image-2"></div>
-              <div class="card__description">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
-              </div>
-            </a>
-            <a href="./pages/resto-3.html" class="card">
-              <div class="card__image card__image-3"></div>
-              <div class="card__description">
-                <h3>À la française</h3>
-                <p>Cité Rouge</p>
-              </div>
-            </a>
-            <a href="./pages/resto-4.html" class="card">
-              <div class="card__image card__image-4"></div>
-              <div class="card__description">
-                <h3>Le Délice des sens</h3>
-                <p>Folie-Méricourt</p>
-              </div>
-            </a>
-          </div>
+          <a href="#" class="card">
+            <div class="card__image card__image-4"></div>
+            <div class="card__description">
+              <h3>Le délice des sens</h3>
+              <p>Folie-Méricourt</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+        </div>
         </section>
       </main>
-  
+
       <footer>
         <h2>ohmyfood</h2>
         <p>
@@ -93,6 +101,7 @@
           <a href="mailto:math.paraveman@gmail.com">Contact</a>
         </p>
       </footer>
+
     </body>
   
   </html>
