--- a/index.html
+++ b/index.html
@@ -13,95 +13,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    
-    <header>
-        <img id="logo" src="images/ohmyfood.png" alt="Logo Ohmyfood">
-    </header>
+<body id="homepage">
+  <div class="loader"></div>
+  <header>
+    <h1>ohmyfood</h1>
+  </header>
 
     <div class="city">
-        <i class="fas fa-map-marker-alt"></i>
-        <h2>Paris, Belleville</h2>
+      <i class="fas fa-map-marker-alt"></i>
+      <h2>Paris, Belleville</h2>
     </div>
-  
-      <main>
-        <section class="explorer">
-          <h2>Réservez le menu qui <br>vous convient</h2>
-          <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-          <button>Explorer nos restaurants</button>
-          <div class="gradient">
-  
-          </div>
-        </section>
-  
-        <section class="tuto">
-          <h2>Fonctionnement</h2>
-          <ol>
-            <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-            <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
-          </ol>
-        </section>
 
-        <section class="menus">
-          <h2>Restaurants</h2>
-          <div class ="menus__cards">
-          <a href="#" class="card new">
+    <main>
+      <section class="explorer">
+        <h2>Réservez le menu qui <br>vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <button>Explorer nos restaurants</button>
+        <div class="gradient">
+
+        </div>
+      </section>
+
+      <section class="tuto">
+        <h2>Fonctionnement</h2>
+        <ol>
+          <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+          <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+          <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+        </ol>
+      </section>
+
+      <section class="menus">
+        <h2>Restaurants</h2>
+        <div class="menus__cards">
+          <a href="./pages/la-palette-du-gout.html" class="card new">
             <div class="card__image card__image-1"></div>
             <div class="card__description">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
             </div>
           </a>
-          <a href="#" class="card new">
+          <a href="./pages/resto-2.html" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages/resto-3.html" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__description">
               <h3>À la française</h3>
               <p>Cité Rouge</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
             </div>
-            </a>
-          <a href="#" class="card">
+          </a>
+          <a href="./pages/resto-4.html" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__description">
-              <h3>Le délice des sens</h3>
+              <h3>Le Délice des sens</h3>
               <p>Folie-Méricourt</p>
-              <i class="far fa-heart"></i>
-              <i class="fas fa-heart"></i>
             </div>
           </a>
         </div>
-        </section>
-      </main>
+      </section>
+    </main>
 
-      <footer>
-        <h2>ohmyfood</h2>
-        <p>
-          <i class="fas fa-utensils"></i>
-          Proposer un restaurant
-        </p>
-        <p>
-          <i class="fas fa-hands-helping"></i>
-          Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-          <a href="mailto:math.paraveman@gmail.com">Contact</a>
-        </p>
-      </footer>
+    <footer>
+      <h2>ohmyfood</h2>
+      <p>
+        <i class="fas fa-utensils"></i>
+        Proposer un restaurant
+      </p>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="mailto:math.paraveman@gmail.com">Contact</a>
+      </p>
+    </footer>
+  </body>
 
-    </body>
-  
-  </html>
+</html>
