--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -18,17 +18,118 @@
   </header>
   
   <div class="banner"><img src="../images/menu-1.jpg" alt="La palette du goût"></div>
-  <div class="resto__main">
+  <div class="resto__title">
     <h2>La palette du goût</h2>
   </div>
 
-  <main>
+  <main class="resto-main">
+    <h3>Entrées</h3>
   <section class="menu-grid">
-    <div class="menu__category">Groupe1</div>
-    <div class="menu__category">Groupe2</div>
-    <div class="menu__category">Groupe3</div>
+    <div class="menu__category">
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Fricassée d'escargot</h4>
+          <p>Au piment d'espelette</p>
+        </div>
+        <span class="menu-item__price">25€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Foie gras de canard mi-cuit</h4>
+          <p>Et ses copeaux de truffe noire</p>
+        </div>
+        <span class="menu-item__price">35€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+        </div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Oeuf au plat</h4>
+          <p>Assaisonné à la truffe sur lit de poireaux</p>
+        </div>
+        <span class="menu-item__price">20€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+  </div>
+
+  <h3>Plats</h3>
+  <section class="menu-grid">
+    <div class="menu__category">
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Filet de boeuf aux herbes</h4>
+          <p>Accompagné de sa ribambelle de légumes</p>
+        </div>
+        <span class="menu-item__price">40€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Parmentier de queue de boeuf</h4>
+          <p>A la truffe noire sur sa purée de panais</p>
+        </div>
+        <span class="menu-item__price">35€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+        </div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Filet de Turbot</h4>
+          <p>Aux agrumes</p>
+        </div>
+        <span class="menu-item__price">44€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+  </div>
+
+  <h3>Desserts</h3>
+  <section class="menu-grid">
+    <div class="menu__category">
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Paris-Brest</h4>
+          <p>Revisité</p>
+        </div>
+        <span class="menu-item__price">18€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Macaron au chocolat d'exception</h4>
+          <p>Et glace à la vanille de Madagascar</p>
+        </div>
+        <span class="menu-item__price">22€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+        </div>
+      </div>
+    </div>
+    <div class="menu__category">      
+      <div class="menu-item">
+        <div class="menu-item__description">
+          <h4>Mousse au chocolat</h4>
+          <p>Au piment d'espelette et à la truffe noire</p>
+        </div>
+        <span class="menu-item__price">23€</span>
+        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+    </div>
+  </div>
+
   </section>
-  <main>
+</main>
 
 
 
