--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -11,11 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../images/favicon/site.webmanifest">
 </head>
-<body>
-  <header>
-    <h1>ohmyfood</h1>
-  </header>
+<body id="page-resto">
+  <a href="./../index.html">
+    <header>
+      <h1>ohmyfood</h1>
+    </header>
+  </a>
   
   <div class="banner"><img src="../images/menu-1.jpg" alt="La palette du goût"></div>
   <div class="resto__title">
@@ -58,76 +64,77 @@
     </div>
   </div>
 
-  <h3>Plats</h3>
-  <section class="menu-grid">
-    <div class="menu__category">
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Filet de boeuf aux herbes</h4>
-          <p>Accompagné de sa ribambelle de légumes</p>
-        </div>
-        <span class="menu-item__price">40€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
-      </div>
-    </div>
-    <div class="menu__category">      
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Parmentier de queue de boeuf</h4>
-          <p>A la truffe noire sur sa purée de panais</p>
-        </div>
-        <span class="menu-item__price">35€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+    <h3>Plats</h3>
+      <div class="menu__category">
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Filet de boeuf aux herbes</h4>
+            <p>Accompagné de sa ribambelle de légumes</p>
+          </div>
+          <span class="menu-item__price">40€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
         </div>
       </div>
-    </div>
-    <div class="menu__category">      
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Filet de Turbot</h4>
-          <p>Aux agrumes</p>
+      <div class="menu__category">      
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Parmentier de queue de boeuf</h4>
+            <p>A la truffe noire sur sa purée de panais</p>
+          </div>
+          <span class="menu-item__price">35€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
+          </div>
         </div>
-        <span class="menu-item__price">44€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+      <div class="menu__category">      
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Filet de Turbot</h4>
+            <p>Aux agrumes</p>
+          </div>
+          <span class="menu-item__price">44€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <h3>Desserts</h3>
-  <section class="menu-grid">
-    <div class="menu__category">
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Paris-Brest</h4>
-          <p>Revisité</p>
-        </div>
-        <span class="menu-item__price">18€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
-      </div>
-    </div>
-    <div class="menu__category">      
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Macaron au chocolat d'exception</h4>
-          <p>Et glace à la vanille de Madagascar</p>
-        </div>
-        <span class="menu-item__price">22€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+    <h3>Desserts</h3>
+      <div class="menu__category">
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Paris-Brest</h4>
+            <p>Revisité</p>
+          </div>
+          <span class="menu-item__price">18€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
         </div>
       </div>
-    </div>
-    <div class="menu__category">      
-      <div class="menu-item">
-        <div class="menu-item__description">
-          <h4>Mousse au chocolat</h4>
-          <p>Au piment d'espelette et à la truffe noire</p>
+      <div class="menu__category">      
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Macaron au chocolat d'exception</h4>
+            <p>Et glace à la vanille de Madagascar</p>
+          </div>
+          <span class="menu-item__price">22€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
+          </div>
         </div>
-        <span class="menu-item__price">23€</span>
-        <div class="menu-item__check"><i class="fas fa-check"></i></div>
+      </div>
+      <div class="menu__category">      
+        <div class="menu-item">
+          <div class="menu-item__description">
+            <h4>Mousse au chocolat</h4>
+            <p>Au piment d'espelette et à la truffe noire</p>
+          </div>
+          <span class="menu-item__price">23€</span>
+          <div class="menu-item__check"><i class="fas fa-check"></i></div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
+  <section class="order">
+    <button>Commander</button>
   </section>
 </main>
 
