--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oh My Food</title>
+    <title>Oh My Food - Accueil</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -58,21 +58,21 @@
               <p>Ménilmontant</p>
             </div>
           </a>
-          <a href="./pages/resto-2.html" class="card new">
+          <a href="./pages/la-note-enchantee.html" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__description">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
             </div>
           </a>
-          <a href="./pages/resto-3.html" class="card">
+          <a href="./pages/a-la-francaise.html" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__description">
               <h3>À la française</h3>
               <p>Cité Rouge</p>
             </div>
           </a>
-          <a href="./pages/resto-4.html" class="card">
+          <a href="./pages/le-delice-des-sens.html" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__description">
               <h3>Le Délice des sens</h3>
