--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant La palette du goût</title>
+    <title>Restaurant La note enchantée</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,9 +23,9 @@
     </header>
   </a>
   
-  <div class="banner"><img src="../images/menu-1.jpg" alt="La palette du goût"></div>
+  <div class="banner"><img src="../images/menu-2.jpg" alt="La note enchantée"></div>
   <div class="resto__title">
-    <h2>La palette du goût</h2>
+    <h2>La note enchantée</h2>
   </div>
 
   <main class="resto-main">
@@ -34,8 +34,8 @@
     <div class="menu__category">
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Fricassée d'escargot</h4>
-          <p>Au piment d'espelette</p>
+          <h4>Raviole de foie gras</h4>
+          <p>Accompagnés de leur crème à la truffe</p>
         </div>
         <span class="menu-item__price">25€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -44,8 +44,8 @@
     <div class="menu__category">      
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Foie gras de canard mi-cuit</h4>
-          <p>Et ses copeaux de truffe noire</p>
+          <h4>Caviar osciètre</h4>
+          <p>Sur blini à la farine de blé noir</p>
         </div>
         <span class="menu-item__price">35€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -55,8 +55,8 @@
     <div class="menu__category">      
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Oeuf au plat</h4>
-          <p>Assaisonné à la truffe sur lit de poireaux</p>
+          <h4>Homard et espuma</h4>
+          <p>Marinés aux zests d'orange</p>
         </div>
         <span class="menu-item__price">20€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -69,8 +69,8 @@
       <div class="menu__category">
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Filet de boeuf aux herbes</h4>
-            <p>Accompagné de sa ribambelle de légumes</p>
+            <h4>Noix de coquilles Saint-Jacques</h4>
+            <p>Sur lit de purée de céleri-rave</p>
           </div>
           <span class="menu-item__price">40€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -79,8 +79,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Parmentier de queue de boeuf</h4>
-            <p>A la truffe noire sur sa purée de panais</p>
+            <h4>Langoustine poêlée</h4>
+            <p>Purée de patate douce</p>
           </div>
           <span class="menu-item__price">35€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -90,8 +90,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Filet de Turbot</h4>
-            <p>Aux agrumes</p>
+            <h4>Mijoté de queue de boeuf</h4>
+            <p>Et riz sauvage aux zestes de citron</p>
           </div>
           <span class="menu-item__price">44€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -104,8 +104,8 @@
       <div class="menu__category">
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Paris-Brest</h4>
-            <p>Revisité</p>
+            <h4>Macaron noisette et chocolat</h4>
+            <p>Glace au caramel brun et sel de Guérande</p>
           </div>
           <span class="menu-item__price">18€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -114,8 +114,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Macaron au chocolat d'exception</h4>
-            <p>Et glace à la vanille de Madagascar</p>
+            <h4>Baba au rhum revisité</h4>
+            <p>Avec son coulis de citron</p>
           </div>
           <span class="menu-item__price">22€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -125,8 +125,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Mousse au chocolat</h4>
-            <p>Au piment d'espelette et à la truffe noire</p>
+            <h4>Tarte au citron meringuée</h4>
+            <p>Destructurée</p>
           </div>
           <span class="menu-item__price">23€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
