--- a/pages/le-delice-des-sens.html
+++ b/pages/le-delice-des-sens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant La palette du goût</title>
+    <title>Le délice des sens</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,9 +23,9 @@
     </header>
   </a>
   
-  <div class="banner"><img src="../images/menu-1.jpg" alt="La palette du goût"></div>
+  <div class="banner"><img src="../images/menu-4.jpg" alt="Le délice des sens"></div>
   <div class="resto__title">
-    <h2>La palette du goût</h2>
+    <h2>Le délice des sens</h2>
   </div>
 
   <main class="resto-main">
@@ -34,8 +34,8 @@
     <div class="menu__category">
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Fricassée d'escargot</h4>
-          <p>Au piment d'espelette</p>
+          <h4>Tartares de thon</h4>
+          <p>Assaisonné au yuzu</p>
         </div>
         <span class="menu-item__price">25€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -44,8 +44,8 @@
     <div class="menu__category">      
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Foie gras de canard mi-cuit</h4>
-          <p>Et ses copeaux de truffe noire</p>
+          <h4>Bouchée de homard croustillant</h4>
+          <p>Et sa farandole de petits légumes</p>
         </div>
         <span class="menu-item__price">35€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -55,8 +55,8 @@
     <div class="menu__category">      
       <div class="menu-item">
         <div class="menu-item__description">
-          <h4>Oeuf au plat</h4>
-          <p>Assaisonné à la truffe sur lit de poireaux</p>
+          <h4>Velouté de cèpes</h4>
+          <p>Aux truffes</p>
         </div>
         <span class="menu-item__price">20€</span>
         <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -69,8 +69,8 @@
       <div class="menu__category">
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Filet de boeuf aux herbes</h4>
-            <p>Accompagné de sa ribambelle de légumes</p>
+            <h4>Poulet rôti aux herbes de provences</h4>
+            <p>Et sa crème de truffe</p>
           </div>
           <span class="menu-item__price">40€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -79,8 +79,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Parmentier de queue de boeuf</h4>
-            <p>A la truffe noire sur sa purée de panais</p>
+            <h4>Langouste rôtie</h4>
+            <p>Et ses légumes de saison</p>
           </div>
           <span class="menu-item__price">35€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -90,8 +90,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Filet de Turbot</h4>
-            <p>Aux agrumes</p>
+            <h4>Côte de boeuf angus</h4>
+            <p>Et sa purée de panais</p>
           </div>
           <span class="menu-item__price">44€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -104,8 +104,8 @@
       <div class="menu__category">
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Paris-Brest</h4>
-            <p>Revisité</p>
+            <h4>Farandole de desserts</h4>
+            <p>Du chef</p>
           </div>
           <span class="menu-item__price">18€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -114,8 +114,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Macaron au chocolat d'exception</h4>
-            <p>Et glace à la vanille de Madagascar</p>
+            <h4>Crème brulée</h4>
+            <p>Revisitée</p>
           </div>
           <span class="menu-item__price">22€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
@@ -125,8 +125,8 @@
       <div class="menu__category">      
         <div class="menu-item">
           <div class="menu-item__description">
-            <h4>Mousse au chocolat</h4>
-            <p>Au piment d'espelette et à la truffe noire</p>
+            <h4>Tiramisu</h4>
+            <p>À la noisette</p>
           </div>
           <span class="menu-item__price">23€</span>
           <div class="menu-item__check"><i class="fas fa-check"></i></div>
