--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
         <div class="menus__cards">
           <a href="./pages/la-palette-du-gout.html" class="card new">
             <div class="card__image card__image-1"></div>
-            <div class="card__description">
+            <div class="card__desc">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
-            </div>
+              </div>
           </a>
           <a href="./pages/la-note-enchantee.html" class="card new">
             <div class="card__image card__image-2"></div>
-            <div class="card__description">
+            <div class="card__desc">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
             </div>
           </a>
           <a href="./pages/a-la-francaise.html" class="card">
             <div class="card__image card__image-3"></div>
-            <div class="card__description">
+            <div class="card__desc">
               <h3>À la française</h3>
               <p>Cité Rouge</p>
             </div>
           </a>
           <a href="./pages/le-delice-des-sens.html" class="card">
             <div class="card__image card__image-4"></div>
-            <div class="card__description">
+            <div class="card__desc">
               <h3>Le Délice des sens</h3>
               <p>Folie-Méricourt</p>
             </div>
