--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
     <link rel="manifest" href="../images/favicon/site.webmanifest">
 </head>
-</head>
 
-<body id="homepage">
+<body>
   <div class="loader"></div>
   <header>
     <h1>ohmyfood</h1>
@@ -54,29 +53,53 @@
           <a href="./pages/la-palette-du-gout.html" class="card new">
             <div class="card__image card__image-1"></div>
             <div class="card__desc">
-              <h3>La palette du goût</h3>
-              <p>Ménilmontant</p>
+              <div class="card__desc__content">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
               </div>
+              <div class="card__btn menu__btn">                
+                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+              </div>
+            </div>
           </a>
           <a href="./pages/la-note-enchantee.html" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__desc">
-              <h3>La note enchantée</h3>
-              <p>Charonne</p>
+              <div class="card__desc__content">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <div class="card__btn menu__btn">                
+                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+              </div>
             </div>
           </a>
           <a href="./pages/a-la-francaise.html" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__desc">
-              <h3>À la française</h3>
-              <p>Cité Rouge</p>
+              <div class="card__desc__content">
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <div class="card__btn menu__btn">                
+                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+              </div>
             </div>
           </a>
           <a href="./pages/le-delice-des-sens.html" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__desc">
-              <h3>Le Délice des sens</h3>
-              <p>Folie-Méricourt</p>
+              <div class="card__desc__content">
+                <h3>Le Délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+              <div class="card__btn menu__btn">                
+                <i class="card__like menu__like menu__like--noBg far fa-heart fa-2x"></i>
+                <i class="card__like menu__like menu__like--bg fas fa-heart fa-2x"></i>
+              </div>
             </div>
           </a>
         </div>
