--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
       <section class="explorer">
-        <h2>Réservez le menu qui <br>vous convient</h2>
+        <h2>Réservez le menu qui <br>vous convient pas</h2>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
         <button>Explorer nos restaurants</button>
         <div class="gradient">
